tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/basic-byte-escapes.stderr
TOML parse error at line 1, column 13
  |
1 | answer = "\x33"
  |             ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
